objects/SFDC_Project_Team__c.object
<CustomObject>
    <description>Team members</description>
    <label>Project Team</label>
    <nameField>
        <displayFormat>Team - {0000}</displayFormat>
        <label>Project Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001ERKqEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_Project_Old__c</referenceTo>
        <relationshipName>R00N30000001ERKnEAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Team_Name__c</fullName>
        <description>Team Name</description>
        <label>Project Team Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>